<resources>
    <string name="app_name">智能灯光控制</string>
    <string name="led3_on">灯3开</string>
    <string name="led3_off">灯3关</string>
    <string name="led4_on">灯4开</string>
    <string name="led4_off">灯4关</string>
    <string name="led5_on">灯5开</string>
    <string name="led5_off">灯5关</string>
    <string name="led6_on">灯6开</string>
    <string name="led6_off">灯6关</string>
    <string name="led7_on">灯7开</string>
    <string name="led7_off">灯7关</string>
    <string name="led8_on">灯8开</string>
    <string name="led8_off">灯8关</string>
    <string name="all_on">全亮</string>
    <string name="all_off">全关</string>
    <string name="yes">确认</string>
    <string name="_5_50">的亮度：0</string>
    <string name="light">的亮度：%d</string>
    <string name="select">请选择灯光:</string>
    <string name="yanshi">延时</string>
    <string name="time">请输入时间</string>
    <string name="dingshi">定时</string>
    <string name="alert">关灯提醒功能</string>
    <string name="start">开始时间：</string>
    <string name="end">结束时间：</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="welcome">迎宾功能</string>
    <string name="setting">保存设置</string>
    <string name="basic">基本设置</string>
    <string name="timer">定时开闭</string>
    <string name="advance">高级功能</string>
    <string name="_3">灯3</string>
    <string name="_4">灯4</string>
    <string name="_5">灯5</string>
    <string name="_6">灯6</string>
    <string name="_7">灯7</string>
    <string name="_8">灯8</string>
    <string name="wifi_disconnect">WiFi未连接！</string>
    <string name="server_disconnect">服务器未连接！</string>
    <string name="server_connect">已连接到服务器！</string>
</resources>
