<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".One">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:contentDescription="@string/_3"
        android:src="@drawable/off" />

    <ToggleButton
        android:id="@+id/button1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignStart="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:checked="false"
        android:minHeight="0dp"
        android:textOff="@string/led3_off"
        android:textOn="@string/led3_on" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:contentDescription="@string/_4"
        android:src="@drawable/off" />

    <ToggleButton
        android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2"
        android:layout_below="@+id/imageView2"
        android:checked="false"
        android:minHeight="0dp"
        android:textOff="@string/led4_off"
        android:textOn="@string/led4_on" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:contentDescription="@string/_5"
        android:src="@drawable/off" />

    <ToggleButton
        android:id="@+id/button3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_alignStart="@+id/imageView3"
        android:layout_below="@+id/imageView3"
        android:checked="false"
        android:minHeight="0dp"
        android:textOff="@string/led5_off"
        android:textOn="@string/led5_on" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignStart="@+id/imageView1"
        android:layout_below="@+id/button1"
        android:contentDescription="@string/_6"
        android:src="@drawable/off" />

    <ToggleButton
        android:id="@+id/button4"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_alignStart="@+id/imageView4"
        android:layout_below="@+id/imageView4"
        android:checked="false"
        android:minHeight="0dp"
        android:textOff="@string/led6_off"
        android:textOn="@string/led6_on" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/_7"
        android:src="@drawable/off" />

    <ToggleButton
        android:id="@+id/button5"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView5"
        android:layout_alignStart="@+id/imageView5"
        android:layout_below="@+id/imageView5"
        android:checked="false"
        android:minHeight="0dp"
        android:textOff="@string/led7_off"
        android:textOn="@string/led7_on" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_alignStart="@+id/imageView3"
        android:layout_below="@+id/button3"
        android:contentDescription="@string/_8"
        android:src="@drawable/off" />

    <ToggleButton
        android:id="@+id/button6"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView6"
        android:layout_alignStart="@+id/imageView6"
        android:layout_below="@+id/imageView6"
        android:checked="false"
        android:minHeight="0dp"
        android:textOff="@string/led8_off"
        android:textOn="@string/led8_on" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button4"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/all_on"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button6"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/all_off"
        android:textSize="18sp" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button8"
        android:layout_centerHorizontal="true">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button12"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button12"
            android:layout_toEndOf="@id/spinner"
            android:layout_toRightOf="@id/spinner"
            android:text="@string/_5_50"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="222dp"
            android:layout_marginStart="222dp"
            android:layout_marginTop="10dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/yes"
            android:textSize="16sp" />

    </RelativeLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView3"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignRight="@+id/imageView3"
        android:layout_alignStart="@+id/imageView1"
        android:layout_below="@+id/container1"
        android:layout_marginTop="1dp"
        android:max="100" />

</RelativeLayout>