<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Three">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignLeft="@+id/container3"
        android:layout_alignStart="@+id/container3"
        android:text="@string/alert"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ToggleButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:checked="false"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:textOff="@string/close"
        android:textOn="@string/open"
        android:textSize="16sp" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/container1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/start"
                android:textSize="16sp" />

            <TimePicker
                android:id="@+id/timepicker1"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_below="@id/textView1"
                android:timePickerMode="spinner" />

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/container2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/container1"
            android:layout_toRightOf="@id/container1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/end"
                android:textSize="16sp" />

            <TimePicker
                android:id="@+id/timepicker2"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_below="@id/textView2"
                android:timePickerMode="spinner" />

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignLeft="@+id/container3"
        android:layout_alignStart="@+id/container3"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ToggleButton
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_below="@+id/container"
        android:checked="false"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:textOff="@string/close"
        android:textOn="@string/open"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/spinner"
        android:layout_alignLeft="@+id/container3"
        android:layout_alignStart="@+id/container3"
        android:text="@string/select"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_below="@+id/button1"
        android:textSize="16sp" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/timepicker3"
            android:layout_centerVertical="true"
            android:text="@string/start"
            android:textSize="16sp" />

        <TimePicker
            android:id="@+id/timepicker3"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_toEndOf="@+id/textView4"
            android:layout_toRightOf="@+id/textView4"
            android:timePickerMode="spinner" />

    </RelativeLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container3"
        android:layout_centerHorizontal="true"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:text="@string/setting" />

</RelativeLayout>