<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Two">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/spinner"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/select"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/textView2"
            android:layout_toRightOf="@id/textView2"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/container2"
        android:layout_alignStart="@+id/container2"
        android:layout_below="@+id/container">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/dingshi"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/textView5"
            android:layout_toRightOf="@id/textView5"
            android:textSize="16sp" />

        <TimePicker
            android:id="@+id/timepicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/spinner3"
            android:layout_toRightOf="@+id/spinner3"
            android:timePickerMode="spinner" />

    </RelativeLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container1"
        android:layout_centerHorizontal="true"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:text="@string/yes"
        android:textSize="16sp" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/spinner1"
            android:text="@string/yanshi"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/textView3"
            android:layout_toRightOf="@id/textView3"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/spinner1"
            android:layout_toEndOf="@+id/spinner1"
            android:layout_toRightOf="@+id/spinner1"
            android:gravity="center"
            android:hint="@string/time"
            android:inputType="number"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/spinner1"
            android:layout_toEndOf="@id/textView4"
            android:layout_toRightOf="@id/textView4"
            android:textSize="16sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:text="@string/yes"
        android:textSize="16sp" />

</RelativeLayout>